[gd_scene load_steps=4 format=2]

[ext_resource path="res://ItemList.tscn" type="PackedScene" id=1]
[ext_resource path="res://equipment/EquipmentTab.gd" type="Script" id=2]
[ext_resource path="res://equipment/TypeTabContainer.tscn" type="PackedScene" id=3]

[node name="Equipment" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1273.0
margin_bottom = 713.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ItemList" parent="HBoxContainer" instance=ExtResource( 1 )]
table = 2
search_placeholder = "Search equipment"
button_label = "Add a new equipment"

[node name="TabContainer" type="TabContainer" parent="HBoxContainer"]
margin_left = 304.0
margin_right = 1266.0
margin_bottom = 706.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Normal" parent="HBoxContainer/TabContainer" instance=ExtResource( 3 )]

[node name="Upgraded" parent="HBoxContainer/TabContainer" instance=ExtResource( 3 )]
visible = false
type = 1

[node name="Weakened" parent="HBoxContainer/TabContainer" instance=ExtResource( 3 )]
visible = false
type = 2

[node name="Downgraded" parent="HBoxContainer/TabContainer" instance=ExtResource( 3 )]
visible = false
type = 3
[connection signal="add_button_pressed" from="HBoxContainer/ItemList" to="." method="_on_ItemList_add_button_pressed"]
[connection signal="item_selected" from="HBoxContainer/ItemList" to="." method="_on_ItemList_item_selected"]
